--- a/client/index.html
+++ b/client/index.html
@@ -6,20 +6,12 @@
     <title>Search</title>
     <script src="https://cdn.tailwindcss.com"></script>
 </head>
-<body class="p-20" id="app">
+<body class="bg-gray-100 p-4" id="app">
     <search-component></search-component>    
     <script src="https://unpkg.com/vue@3.0.11"></script>
     <script src="./app.js"></script>
     <script src="./operator-component.js"></script>
     <script src="./image-component.js"></script>
     <script src="./color-component.js"></script>
-
-    <style>
-    hr {
-    height: 0;
-    color: inherit;
-    border-top-width: 1px;
-    border-color: red;
-}</style>
 </body>
 </html>
